# mad-rust-bookmarks-api

./: Cargo.toml  README.md
src/: error.rs  main.rs  routes.rs  state.rs
src/extractors/: mod.rs  validated_json.rs
src/handlers/: bookmark_handlers.rs  mod.rs
src/models/: bookmark.rs  mod.rs
src/repository/: bookmark_repository.rs  mod.rs
src/service/: bookmark_service.rs  mod.rs
