[package]
name = "bookmarks-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"                                                  # CORS is a separate crate, not built into actix-web
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
futures = "0.3"
dotenvy = "0.15"
